# sense-sdx

./: .gitignore  .sense-o-auth.yaml.template  README.md  pyproject.toml
schemas/: sense-schema-domain.json  sense-schema-intent.json  sense_schema_instance.json
sense_sdx/: client.py
src/sense_sdx/: client.py  main.py  translate.py
src/sense_sdx/models/: domain.py  instance.py  intent.py  modelcreator.py
tests/: __init__.py  test_client.py  test_domain.py  test_translate.py
tests/data/: domain_ids.json  domains.json  es.net.json  instance.json  intent.json  mren8700.json  sense_data.txt  starlight.org.json  test-request-amlight_sax-p2p-v2.json
